--- a/src/sass/_headerfirst.scss
+++ b/src/sass/_headerfirst.scss
@@ -1,4 +1,10 @@
-
+#headerfirst {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+}
 div {
     box-sizing: border-box;
   }
