--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,8 @@
 @import './common';
 @import './root';
+@import './timer';
 @import './headerfirst';
+@import './footer';
+@import './headersecond';
+@import './footersecond';
+@import './btnup';
